Swaggo doesnt support session cookies apparently
